--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "@angular/router": "^16.1.0",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@ng-bootstrap/ng-bootstrap": "^15.0.1",
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.0",
-    "rxjs": "~7.8.0",
+    "rxjs": "^7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "^0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.2",
